Fixed some CTA display issues on Mobile devices

--- a/LightningUI/style.css
+++ b/LightningUI/style.css
@@ -2852,6 +2852,15 @@ a:hover>svg.ctaArrow.pulse {
       }
     }
   }
+
+  button {
+    font-size: calc(var(--h2Size) *0.8) !important;
+
+    >a {
+      padding-block: 8px;
+      padding-left: 5px;
+    }
+  }
 }
 
 @media screen and (max-width: 900px) {
